Fixed spacing between title and bluprint cards

--- a/assets/less/flow-directory.less
+++ b/assets/less/flow-directory.less
@@ -44,7 +44,12 @@
 }
 .directory__header-text {
   .flex(1);
+
+  margin: 0.83em 0;
+
+  font-size: 1.5em;
   font-weight: normal;
+  line-height: 2;
 }
 .directory__flows {
   .flex-display;
