--- a/assets/less/node-wizard.less
+++ b/assets/less/node-wizard.less
@@ -51,7 +51,8 @@
 }
 
 .node-wizard__form-actions{
-  margin: 0 0 20px;
+  margin: 0;
+  padding: 18px 2px 26px;
 }
 
 .node-wizard__button {
